# master-thesis

./: pyproject.toml
data/: lehrerinnen.csv  schuelerinnen.csv
src/: data_analysis.ipynb  modules.py
